# auxiliaire

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  codecov.yml  justfile  msrv-pins.toml  renovate.json  rustfmt.toml  tarpaulin.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit-check.yml  ci.yml  publish.yml  release.yml
bruno/Exercism/: bruno.json  collection.bru
bruno/Exercism/environments/: Exercism.bru
bruno/Exercism/v2/solutions/: Get Solution.bru  Get Solutions.bru  Mark Solution as Complete.bru  Publish Solution.bru
bruno/Exercism/v2/solutions/submissions/: Get submission files.bru
bruno/Exercism/v2/tracks/exercises/: Get Exercises.bru
resources/tests/with_backup_state/rust/poker/.auxiliaire/: backup_state.json
resources/tests/with_v1_backup_state/rust/poker/.auxiliaire/: backup_state.json
src/: command.rs  download_limiter.rs  duration.rs  error.rs  lib.rs  limiter.rs  main.rs  task_pool.rs
src/command/: backup.rs
src/command/backup/: args.rs  detail.rs  iterations.rs  state.rs
tests/: cli.rs  integration.rs
tests/exercism/: server.rs
tests/exercism/server/handler/: v2.rs
tests/exercism/server/handler/v2/: solutions.rs
