[package]
name = "auxiliaire"
version = "0.2.3"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/auxiliaire#readme"
repository = "https://github.com/clechasseur/auxiliaire"

description = "Your friendly Exercism.org assistant"

keywords = [ "cli", "exercism" ]
categories = [ "command-line-utilities" ]

include = [ "src/**/*", "tests/**/*", "Cargo.lock", "Cargo.toml", "LICENSE", "README.md" ]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
itertools = "0.14.0"
mini_exercism = { version = "4.2.0", features = ["cli", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "io-util", "macros", "sync", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_matches = "1.5.0"
test-log = "0.2.17"
wiremock = "0.6.2"
