[package]
name = "auxiliaire"
version = "0.3.1"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"
rust-version = "1.88.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/auxiliaire#readme"
repository = "https://github.com/clechasseur/auxiliaire"

description = "Your friendly Exercism.org assistant"

keywords = [ "cli", "exercism" ]
categories = [ "command-line-utilities" ]

include = [ "src/**/*", "tests/**/*", "Cargo.lock", "Cargo.toml", "LICENSE", "README.md" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
itertools = "0.14.0"
mini_exercism = { version = "7.1.0", features = ["cli", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "io-util", "macros", "sync", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_matches = "1.5.0"
test-log = "0.2.19"
wiremock = "0.6.5"
